--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -1310,6 +1310,8 @@ jobs:
     - get: loggregator-ci
     - get: log-cache-cli
       trigger: true
+    - get: 10m
+      trigger: true
   - task: run-tests
     file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
     input_mapping:
