--- a/tasks/log-cache-blackbox/task.yml
+++ b/tasks/log-cache-blackbox/task.yml
@@ -55,3 +55,11 @@ params:
   # - Required
   # - The base address for log cache.
   LOG_CACHE_ADDR:
+
+  # - Required
+  # - The UAA Client
+  UAA_CLIENT:
+
+  # - Required
+  # - The UAA Client Secret
+  UAA_CLIENT_SECRET:
