--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -360,6 +360,8 @@ jobs:
       SPACE: development
       USERNAME: {{pws-username}}
       PASSWORD: {{pws-password}}
+      UAA_CLIENT: {{pws-uaa-client}}
+      UAA_CLIENT_SECRET: {{pws-uaa-client-secret}}
     timeout: 5m
   - task: push-datadog-accumulator
     file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
@@ -373,4 +375,6 @@ jobs:
       SPACE: development
       USERNAME: {{pws-username}}
       PASSWORD: {{pws-password}}
+      UAA_CLIENT: {{pws-uaa-client}}
+      UAA_CLIENT_SECRET: {{pws-uaa-client-secret}}
     timeout: 5m
