--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -282,6 +282,8 @@ jobs:
       SKIP_SSL_VALIDATION: true
       USERNAME: {{playground-username}}
       PASSWORD: {{playground-password}}
+      UAA_CLIENT: {{playground-uaa-client}}
+      UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
   - task: push-datadog-accumulator
     file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
     params:
@@ -295,3 +297,5 @@ jobs:
       SKIP_SSL_VALIDATION: true
       USERNAME: {{playground-username}}
       PASSWORD: {{playground-password}}
+      UAA_CLIENT: {{playground-uaa-client}}
+      UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
