--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -228,17 +228,17 @@ resources:
 - name: noisy-neighbor-nozzle-repo
   type: git
   source:
-    uri: https://github.com/cloudfoundry/noisy-neighbor-nozzle
+    uri: git@github.com:cloudfoundry/noisy-neighbor-nozzle
     branch: master
     private_key: {{cf-loggregator-oauth-bot-key}}
 
-- name: noisy-neighbor-binaries
-  type: s3
+- name: noisy-neighbor-release-drafts
+  type: github-release
   source:
-    bucket: noisy-neighbor-binaries
-    regexp: noisy-neighbor-(nozzle|accumulator|datadog-reporter)
-    access_key_id: {{loggregator-team-s3-access-key}}
-    secret_access_key: {{loggregator-team-s3-secret-key}}
+    user: cloudfoundry
+    repository: noisy-neighbor-nozzle
+    access_token: {{access-token}}
+    drafts: true
 
 jobs:
 - name: bump-golang
@@ -1081,7 +1081,7 @@ jobs:
       globs:
       - github-release/builds/*
 
-- name: build-and-upload-noisy-neighbor-nozzle-binaries
+- name: noisy-neighbor-binaries
   serial: true
   plan:
   - aggregate:
@@ -1094,12 +1094,13 @@ jobs:
           repository: loggregator/base
       platform: linux
       params:
-        VERSION_MAJOR: 0
-        VERSION_MINOR: 2
+        NEW_VERSION: 1.3
       inputs:
       - name: noisy-neighbor-nozzle-repo
       outputs:
       - name: binary-output
+      - name: github-release
+      - name: repo-output
       run:
         path: bash
         args:
@@ -1107,6 +1108,16 @@ jobs:
           - |
             #!/bin/bash
             set -ex
+
+            # establish version/tag strings
+            new_version="$NEW_VERSION"
+            tag_name="v$new_version"
+
+            # write out github release files
+            echo "Loggregator $new_version" > github-release/name
+            echo $tag_name > github-release/tag
+            echo "TBD" > github-release/body
+            cp -R noisy-neighbor-nozzle-repo/. repo-output
 
             export WORKSPACE=$PWD
 
@@ -1117,37 +1128,42 @@ jobs:
               cp -R $WORKSPACE/noisy-neighbor-nozzle-repo/ src/code.cloudfoundry.org/
             popd
 
+            mkdir $WORKSPACE/noisy-neighbor
             pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/
               go get ./...
-              for c in cmd/*; do
+              for c in $(ls cmd); do
                 pushd cmd/$c
                   binary_file=noisy-neighbor-$c
-                  GOOS=linux go build -o $binary_file
-                  cp $binary_file $WORKSPACE/binary-output
+                  GOOS=linux go build -o $WORKSPACE/noisy-neighbor/$c
                 popd
               done
             popd
 
-            pushd cmd/cli-plugin
+            mv noisy-neighbor/deployer noisy-neighbor/deployer-linux
+            cp noisy-neighbor-nozzle-repo/cmd/deployer/manifest/manifest_template.yml noisy-neighbor/.
+            rm noisy-neighbor/cli-plugin
+
+            pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/cmd/deployer
+              GOOS=darwin go build -o $WORKSPACE/noisy-neighbor/deployer-darwin
+              GOOS=windows go build -o $WORKSPACE/noisy-neighbor/deployer-windows
+            popd
+
+            tar czvf binary-output/noisy-neighbor.tgz noisy-neighbor
+
+            pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/cmd/cli-plugin
               GOOS=linux go build -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-linux
               GOOS=darwin go build -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-darwin
               GOOS=windows go build -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-windows
             popd
-  - put: noisy-neighbor-binaries
+  - put: noisy-neighbor-nozzle-repo
     params:
-      file: binary-output/noisy-neighbor-accumulator
-  - put: noisy-neighbor-binaries
+      repository: repo-output
+      rebase: false
+      tag: github-release/tag
+  - put: noisy-neighbor-release-drafts
     params:
-      file: binary-output/noisy-neighbor-datadog-reporter
-  - put: noisy-neighbor-binaries
-    params:
-      file: binary-output/noisy-neighbor-nozzle
-  - put: noisy-neighbor-binaries
-    params:
-      file: binary-output/noisy-neighbor-cli-plugin-linux
-  - put: noisy-neighbor-binaries
-    params:
-      file: binary-output/noisy-neighbor-cli-plugin-darwin
-  - put: noisy-neighbor-binaries
-    params:
-      file: binary-output/noisy-neighbor-cli-plugin-windows
+      name: github-release/name
+      tag: github-release/tag
+      body: github-release/body
+      globs:
+      - binary-output/*
