Update bump-golang job reuse downloaded blob
[#155015012]

Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -217,13 +217,6 @@ resources:
     branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
 
-- name: noisy-neighbor-nozzle-release
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/noisy-neighbor-nozzle-release
-    branch: master
-    private_key: {{cf-loggregator-oauth-bot-key}}
-
 - name: cf-drain-cli
   type: git
   source:
@@ -261,13 +254,6 @@ resources:
     access_token: {{access-token}}
     drafts: true
 
-- name: log-cache-release
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry-incubator/log-cache-release
-    branch: master
-    private_key: {{cf-loggregator-oauth-bot-key}}
-
 jobs:
 - name: bump-golang
   serial: true
@@ -283,7 +269,11 @@ jobs:
     - get: bosh-hm-forwarder-release
     - get: reference-nozzle-release
     - get: noisy-neighbor-nozzle-release
-    - get: log-cache-release
+    - get: log-cache-release-develop
+  - task: download-go
+    file: loggregator-ci/tasks/download-golang/task.yml
+    params:
+      VERSION: &golang-version 1.9.4
   - aggregate:
     - do:
       - task: bump-loggregator-release
@@ -293,7 +283,7 @@ jobs:
         output_mapping:
           updated-release-repo: updated-loggregator-release
         params:
-          VERSION: &golang-version 1.9.4
+          VERSION: *golang-version
           INCLUDE_WINDOWS: true
           ACCESS_KEY_ID: {{s3-access-key-id}}
           SECRET_ACCESS_KEY: {{s3-secret-access-key}}
@@ -478,7 +468,6 @@ jobs:
         params:
           repository: committed-reference-nozzle-release
           rebase: false
-
     - do:
       - task: bump-noisy-neighbor-nozzle-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -503,12 +492,11 @@ jobs:
         params:
           repository: committed-noisy-neighbor-nozzle-release
           rebase: false
-
     - do:
       - task: bump-log-cache-release
         file: loggregator-ci/tasks/bump-golang/task.yml
         input_mapping:
-          release-repo: log-cache-release
+          release-repo: log-cache-release-develop
         output_mapping:
           updated-release-repo: updated-log-cache-release
         params:
@@ -524,7 +512,7 @@ jobs:
           committed-repo: committed-log-cache-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      - put: log-cache-release
+      - put: log-cache-release-develop
         params:
           repository: committed-log-cache-release
           rebase: false
