--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -657,6 +657,7 @@ jobs:
   serial: true
   serial_groups:
   - bosh-cf-cats
+  - bosh-cfar-lats
   plan:
   - aggregate:
     - get: loggregator-ci
