--- a/pipelines/uptimer.yml
+++ b/pipelines/uptimer.yml
@@ -119,17 +119,15 @@ jobs:
 
           cp cf-deployment/operations/scale-database-cluster.yml ops-files/
           cp deployments-loggregator/gcp/upity/ops-files/*.yml ops-files/
-          cat <<EOT >> ops-files/versions.yml
+          cat <<EOT >> ops-files/starting-doppler-count.yml
           - type: replace
-            path: /releases/name=cf-syslog-drain
-            value:
-              name: cf-syslog-drain
-              version: latest
+            path: /instance-groups/name=doppler/instances
+            value: 2
           EOT
-          cat <<EOT >> ops-files/stemcell.yml
+          cat <<EOT >> ops-files/scaling-doppler-count.yml
           - type: replace
-            path: /stemcells/alias=default/version
-            value: 3468.1
+            path: /instance-groups/name=doppler/instances
+            value: 4
           EOT
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -143,7 +141,7 @@ jobs:
       BBL_STATE_DIR: gcp/upity
       SYSTEM_DOMAIN: upity.loggr.cf-app.com
       VARS_STORE_FILE: gcp/upity/deployment-vars.yml
-      OPS_FILES: "allow-insecure-syslog-drains.yml stemcell.yml versions.yml more-dopplers.yml scale-database-cluster.yml"
+      OPS_FILES: "allow-insecure-syslog-drains.yml scale-database-cluster.yml starting-doppler-count.yml"
   - put: deployments-loggregator
     params:
       repository: updated-deployments-loggregator
@@ -161,7 +159,7 @@ jobs:
       BBL_STATE_DIR: gcp/upity
       SYSTEM_DOMAIN: upity.loggr.cf-app.com
       VARS_STORE_FILE: gcp/upity/deployment-vars.yml
-      OPS_FILES: "allow-insecure-syslog-drains.yml versions.yml more-dopplers.yml scale-database-cluster.yml"
+      OPS_FILES: "allow-insecure-syslog-drains.yml scale-database-cluster.yml scaling-doppler-count.yml"
       DEPLOY_WITH_UPTIME_MEASUREMENTS: true
       MEASURE_SYSLOG_AVAILABILITY: true
       TCP_DOMAIN: tcp.upity.loggr.cf-app.com
