Fix collocated typo and use log-cache-release develop in playground
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -35,7 +35,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry-incubator/log-cache-release
-    branch: master
+    branch: develop
 
 - name: loggregator
   type: git
