--- a/pipelines/staging.yml
+++ b/pipelines/staging.yml
@@ -17,7 +17,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
-    branch: v4.21
+    branch: v5.7
 
 - name: loggregator-release-elect
   type: git
@@ -483,18 +483,17 @@ jobs:
 
 - name: bbl-create
   plan:
-  - get: cf-deployment-concourse-tasks
-  - get: deployments-loggregator
-  - get: bosh-deployment
+  - aggregate:
+    - get: cf-deployment-concourse-tasks
+    - get: deployments-loggregator
+    - get: bosh-deployment
   - task: bbl-up
     input_mapping:
       ops-files: bosh-deployment
-      bbl-state: deployments-loggregator
+      env-repo: deployments-loggregator
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
-      BBL_GCP_SERVICE_ACCOUNT_KEY: service-account.key.json
-      BBL_GCP_PROJECT_ID: cff-loggregator
-      BBL_GCP_ZONE: us-central1-a
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
       BBL_GCP_REGION: us-central1
       BBL_STATE_DIR: gcp/staging
       BBL_IAAS: gcp
