Update repository path for bbl-up job
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/staging.yml
+++ b/pipelines/staging.yml
@@ -504,7 +504,7 @@ jobs:
       OPS_FILES: local-dns.yml
   - put: deployments-loggregator
     params:
-      repository: updated-bbl-state
+      repository: updated-env-repo
       rebase: true
 
 - name: bbl-destroy
