--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -585,7 +585,7 @@ jobs:
         S3_ACCESS_KEY: {{s3-access-key}}
         S3_SECRET_KEY: {{s3-secret-key}}
         SSH_KEY: {{loggregator-key}}
-        NEW_VERSION: 101.6
+        NEW_VERSION: "102.0"
       inputs:
       - name: loggregator-develop
       - name: loggregator-master
